--- a/.github/workflows/a2t-whisper.yml
+++ b/.github/workflows/a2t-whisper.yml
@@ -17,7 +17,7 @@ on:
       - "a2t-whisper/**"
 
 jobs:
-  test-a2t-whisper:
+  build-test-push-a2t-whisper:
     runs-on: gpu
     permissions:
       contents: read
@@ -40,49 +40,6 @@ jobs:
 
     - name: Build the CPU Images
       run: |
-        docker build \
-          --file ./a2t-whisper/docker/cpu/Dockerfile \
-          --build-arg="MODEL_ID=tiny" \
-          --tag a2t-whisper-tiny-cpu ./a2t-whisper
-    - name: Test the Images
-      run: |
-        docker run --rm a2t-whisper-tiny-cpu pytest
-
-    - name: Build the GPU Images
-      run: |
-        docker build --file ./a2t-whisper/docker/gpu/Dockerfile --build-arg="MODEL_ID=large-v2" --tag a2t-whisper-large-v2-gpu ./a2t-whisper
-
-    - name: Test the Images
-      run: |
-        docker run --rm a2t-whisper-large-v2-gpu pytest
-
-  push-a2t-whisper:
-    runs-on: gpu
-    needs: [test-a2t-whisper]
-    permissions:
-      contents: read
-      packages: write
-    if: github.event_name == 'push'
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v2
-      with:
-        install: true
-
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Push the Images
-      run: |
         docker buildx create --use
         docker buildx build --push \
           --cache-from ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:latest \
@@ -96,3 +53,11 @@ jobs:
           --build-arg="MODEL_ID=large-v2" \
           --tag ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest \
           --platform linux/amd64 ./a2t-whisper
+
+    - name: Test the Images
+      run: |
+        docker run --rm a2t-whisper-tiny-cpu pytest
+
+    - name: Test the Images
+      run: |
+        docker run --rm a2t-whisper-large-v2-gpu pytest
