--- a/.github/workflows/cpl-t5.yml
+++ b/.github/workflows/cpl-t5.yml
@@ -1,6 +1,7 @@
 name: Copilot T5
 
 env:
+  VERSION: 0.0.1
   DOCKER_BUILDKIT: 1
   DOCKER_CLI_EXPERIMENTAL: "enabled"
   COMPOSE_DOCKER_CLI_BUILD: 1
@@ -17,7 +18,7 @@ on:
       - "cpl-t5/**"
 
 jobs:
-  test-cpl-t5:
+  build-test-push-cpl-t5:
     runs-on: gpu
     permissions:
       contents: read
@@ -29,7 +30,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
+        username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Pull the latest images for caching
@@ -38,43 +39,6 @@ jobs:
 
     - name: Build
       run: |
-        docker build \
-          --cache-from ghcr.io/premai-io/copilot-codet5p-220m-py-cpu:latest \
-          --file ./cpl-t5/docker/cpu/Dockerfile \
-          --build-arg="MODEL_ID=Salesforce/codet5p-220m-py" \
-          --tag cpl-t5-cpu ./cpl-t5
-    - name: Test
-      run: |
-        docker run --rm cpl-t5-cpu pytest
-
-  push-cpl-t5:
-    runs-on: gpu
-    needs: [test-cpl-t5]
-    permissions:
-      contents: read
-      packages: write
-    if: github.event_name == 'push'
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v2
-      with:
-        install: true
-
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and Push
-      run: |
         docker buildx create --use
         docker buildx build --push \
           --cache-from ghcr.io/premai-io/copilot-codet5p-220m-py-cpu:latest \
@@ -82,3 +46,6 @@ jobs:
           --build-arg="MODEL_ID=Salesforce/codet5p-220m-py" \
           --tag ghcr.io/premai-io/copilot-codet5p-220m-py-cpu:latest \
           --platform linux/amd64 ./cpl-t5
+    - name: Test
+      run: |
+        docker run --rm ghcr.io/premai-io/copilot-codet5p-220m-py-cpu:latest pytest
