--- a/.github/workflows/ebd-all-minilm.yml
+++ b/.github/workflows/ebd-all-minilm.yml
@@ -1,6 +1,7 @@
 name: Embeddings Sentence Transformers
 
 env:
+  VERSION: 0.0.1
   DOCKER_BUILDKIT: 1
   DOCKER_CLI_EXPERIMENTAL: "enabled"
   COMPOSE_DOCKER_CLI_BUILD: 1
@@ -49,21 +50,17 @@ jobs:
           --file ./ebd-all-minilm/docker/cpu/Dockerfile \
           --build-arg="MODEL_ID=all-MiniLM-L6-v2" \
           --tag ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest \
+          --tag ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:$VERSION \
           --platform linux/arm64,linux/amd64 ./ebd-all-minilm
-
-    - name: Test the CPU Images
-      run: |
-        docker run --rm ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest pytest
-
-    - name: Build the GPU Images
-      run: |
         docker buildx build --push \
           --cache-from ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest \
           --file ./ebd-all-minilm/docker/gpu/Dockerfile \
           --build-arg="MODEL_ID=all-MiniLM-L6-v2" \
           --tag ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest \
+          --tag ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:$VERSION \
           --platform linux/amd64 ./ebd-all-minilm
 
-    - name: Test the GPU Images
+    - name: Test the CPU Images
       run: |
+        docker run --rm ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest pytest
         docker run --rm --gpus all ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest pytest
