--- a/.github/workflows/mlg-diffusers.yml
+++ b/.github/workflows/mlg-diffusers.yml
@@ -1,6 +1,7 @@
 name: Michelangelo Diffusers
 
 env:
+  VERSION: 0.0.1
   DOCKER_BUILDKIT: 1
   DOCKER_CLI_EXPERIMENTAL: "enabled"
   COMPOSE_DOCKER_CLI_BUILD: 1
@@ -17,7 +18,7 @@ on:
       - "mlg-diffusers/**"
 
 jobs:
-  test-mlg-diffusers:
+  build-test-push-mlg-diffusers:
     runs-on: gpu
     permissions:
       contents: read
@@ -29,7 +30,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
+        username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Pull the latest images for caching
@@ -41,73 +42,19 @@ jobs:
 
     - name: Test the Images
       run: |
-        docker build \
-          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-cpu:latest \
-          --file ./mlg-diffusers/docker/cpu/Dockerfile \
-          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" \
-          --tag mlg-diffusers-cpu ./mlg-diffusers
-        docker run --rm mlg-diffusers-cpu pytest
-
-        docker build \
-          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-cpu:latest \
-          --file ./mlg-diffusers/docker/cpu/Dockerfile \
-          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" \
-          --tag mlg-diffusers-cpu ./mlg-diffusers
-        docker run --rm mlg-diffusers-cpu pytest
-
-        docker build \
-          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-gpu:latest \
-          --file ./mlg-diffusers/docker/gpu/Dockerfile \
-          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" \
-          --tag mlg-diffusers-gpu ./mlg-diffusers
-        docker run --rm --gpus all mlg-diffusers-gpu pytest
-
-        docker build \
-          --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-gpu:latest \
-          --file ./mlg-diffusers/docker/gpu/Dockerfile \
-          --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" \
-          --tag mlg-diffusers-gpu ./mlg-diffusers
-        docker run --rm --gpus all mlg-diffusers-gpu pytest
-
-  push-mlg-diffusers:
-    runs-on: gpu
-    needs: [test-mlg-diffusers]
-    permissions:
-      contents: read
-      packages: write
-    if: github.event_name == 'push'
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v2
-      with:
-        install: true
-
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and Push
-      run: |
         docker buildx build --push \
           --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-cpu:latest \
           --file ./mlg-diffusers/docker/cpu/Dockerfile \
           --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" \
           --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-cpu:latest \
+          --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-cpu:$VERSION \
           --platform linux/arm64,linux/amd64 ./mlg-diffusers
         docker buildx build --push \
           --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-cpu:latest \
           --file ./mlg-diffusers/docker/cpu/Dockerfile \
           --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" \
           --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-cpu:latest \
+          --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-cpu:$VERSION \
           --platform linux/arm64,linux/amd64 ./mlg-diffusers
 
         docker buildx build --push \
@@ -115,10 +62,16 @@ jobs:
           --file ./mlg-diffusers/docker/gpu/Dockerfile \
           --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" \
           --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-gpu:latest \
+          --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-1-base-gpu:$VERSION \
           --platform linux/amd64 ./mlg-diffusers
         docker buildx build --push \
           --cache-from=ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-gpu:latest \
           --file ./mlg-diffusers/docker/gpu/Dockerfile \
           --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" \
           --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-gpu:latest \
+          --tag ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-gpu:$VERSION \
           --platform linux/amd64 ./mlg-diffusers
+    - name:
+      run: |
+        docker run --rm ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-cpu:latest pytest
+        docker run --rm --gpus all ghcr.io/premai-io/michelangelo-stable-diffusion-2-base-gpu:latest pytest
