--- a/.github/workflows/t2a-bark.yml
+++ b/.github/workflows/t2a-bark.yml
@@ -1,6 +1,7 @@
 name: Text to Audio Bark
 
 env:
+  VERSION: 0.0.1
   DOCKER_BUILDKIT: 1
   DOCKER_CLI_EXPERIMENTAL: "enabled"
   COMPOSE_DOCKER_CLI_BUILD: 1
@@ -17,7 +18,7 @@ on:
       - "t2a-bark/**"
 
 jobs:
-  test-t2a-bark:
+  build-test-push-t2a-bark:
     runs-on: gpu
     permissions:
       contents: read
@@ -29,7 +30,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
+        username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Pull the latest images for caching
@@ -38,59 +39,22 @@ jobs:
         docker pull ghcr.io/premai-io/text-to-audio-bark-gpu:latest || true
 
     - name: Build the CPU Images
-      run: docker build \
-        --cache-from=ghcr.io/premai-io/text-to-audio-bark-cpu:latest \
-        --file ./t2a-bark/docker/cpu/Dockerfile \
-        --tag t2a-bark-cpu ./t2a-bark
-
-    - name: Test the CPU Images
-      run: docker run --rm t2a-bark-cpu pytest
-
-    - name: Build the GPU Images
-      run: docker build \
-        --cache-from=ghcr.io/premai-io/text-to-audio-bark-gpu:latest \
-        --file ./t2a-bark/docker/gpu/Dockerfile \
-        --tag t2a-bark-gpu ./t2a-bark
-
-    - name: Test the GPU Images
-      run: docker run --rm --gpus all t2a-bark-gpu pytest
-
-  push-t2a-bark:
-    runs-on: gpu
-    needs: [test-t2a-bark]
-    permissions:
-      contents: read
-      packages: write
-    if: github.event_name == 'push'
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v2
-      with:
-        install: true
-
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and Push
       run: |
         docker buildx create --use
         docker buildx build --push \
           --cache-from=ghcr.io/premai-io/text-to-audio-bark-cpu:latest \
           --file ./t2a-bark/docker/cpu/Dockerfile \
           --tag ghcr.io/premai-io/text-to-audio-bark-cpu:latest \
+          --tag ghcr.io/premai-io/text-to-audio-bark-cpu:$VERSION \
           --platform linux/arm64,linux/amd64 ./t2a-bark
         docker buildx build --push \
           --cache-from=ghcr.io/premai-io/text-to-audio-bark-gpu:latest \
           --file ./t2a-bark/docker/gpu/Dockerfile \
           --tag ghcr.io/premai-io/text-to-audio-bark-gpu:latest \
+          --tag ghcr.io/premai-io/text-to-audio-bark-gpu:$VERSION \
           --platform linux/amd64 ./t2a-bark
+
+    - name: Test the CPU Images
+      run: |
+        docker run --rm ghcr.io/premai-io/text-to-audio-bark-cpu:latest pytest
+        docker run --rm --gpus all ghcr.io/premai-io/text-to-audio-bark-gpu:latest pytest
