added script to build and push all the images

--- a/.github/workflows/cht-llama-cpp.yml
+++ b/.github/workflows/cht-llama-cpp.yml
@@ -11,6 +11,7 @@ on:
     branches: ["main"]
     paths:
       - "cht-llama-cpp/**"
+      - "scripts/**"
 
 jobs:
   build-test-push-cht-llama-cpp:
