--- a/.github/workflows/a2t-whisper.yml
+++ b/.github/workflows/a2t-whisper.yml
@@ -1,20 +1,17 @@
 name: Audio to Text Whisper Job
 
 env:
+  VERSION: 0.0.1
   DOCKER_BUILDKIT: 1
   DOCKER_CLI_EXPERIMENTAL: "enabled"
   COMPOSE_DOCKER_CLI_BUILD: 1
 
 on:
-  pull_request:
-    branches: ["main"]
-    paths:
-      - "a2t-whisper/**"
-
   push:
     branches: ["main"]
     paths:
       - "a2t-whisper/**"
+      - "scripts/**"
 
 jobs:
   build-test-push-a2t-whisper:
@@ -46,18 +43,17 @@ jobs:
           --file ./a2t-whisper/docker/cpu/Dockerfile \
           --build-arg="MODEL_ID=tiny" \
           --tag ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:latest \
+          --tag ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:$VERSION \
           --platform linux/arm64,linux/amd64 ./a2t-whisper
         docker buildx build --push \
           --cache-from ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest \
           --file ./a2t-whisper/docker/gpu/Dockerfile \
           --build-arg="MODEL_ID=large-v2" \
           --tag ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest \
+          --tag ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:$VERSION \
           --platform linux/amd64 ./a2t-whisper
 
     - name: Test the Images
       run: |
-        docker run --rm a2t-whisper-tiny-cpu pytest
-
-    - name: Test the Images
-      run: |
-        docker run --rm a2t-whisper-large-v2-gpu pytest
+        docker run --rm ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:latest pytest
+        docker run --rm ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest pytest
