--- a/.github/workflows/cpl-replit.yml
+++ b/.github/workflows/cpl-replit.yml
@@ -7,15 +7,11 @@ env:
   COMPOSE_DOCKER_CLI_BUILD: 1
 
 on:
-  pull_request:
-    branches: ["main"]
-    paths:
-      - "cpl-replit/**"
-
   push:
     branches: ["main"]
     paths:
       - "cpl-replit/**"
+      - "scripts/**"
 
 jobs:
   build-test-push-cpl-replit:
