--- a/.github/workflows/ebd-all-minilm.yml
+++ b/.github/workflows/ebd-all-minilm.yml
@@ -11,6 +11,7 @@ on:
     branches: ["main"]
     paths:
       - "ebd-all-minilm/**"
+      - "scripts/**"
 
 jobs:
   build-test-push-ebd-all-minilm:
