--- a/.github/workflows/a2t-whisper.yml
+++ b/.github/workflows/a2t-whisper.yml
@@ -28,7 +28,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Test the Images
+    - name: Build & Push the Images
       run: |
         docker buildx build --push \
             --cache-from ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:latest \
@@ -46,7 +46,7 @@ jobs:
             --tag ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:$VERSION \
             --platform linux/amd64 ./a2t-whisper
 
-    - name:
+    - name: Test the Images
       run: |
         docker run --rm ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:latest pytest
         docker run --rm ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest pytest
