--- a/.github/workflows/cdr-t5.yml
+++ b/.github/workflows/cdr-t5.yml
@@ -1,7 +1,7 @@
-name: Coder Replit
+name: Coder T5
 
 env:
-  VERSION: 0.0.2
+  VERSION: 0.0.5
   DOCKER_BUILDKIT: 1
   DOCKER_CLI_EXPERIMENTAL: "enabled"
   COMPOSE_DOCKER_CLI_BUILD: 1
@@ -10,10 +10,10 @@ on:
   push:
     branches: ["main"]
     paths:
-      - "cdr-replit/**"
+      - "cdr-t5/**"
 
 jobs:
-  build-test-push-cdr-replit:
+  build-test-push-cdr-t5:
     runs-on: self-hosted
     permissions:
       contents: read
@@ -31,13 +31,13 @@ jobs:
     - name: Build & Push the Images
       run: |
         docker buildx build --push \
-            --cache-from ghcr.io/premai-io/coder-replit-code-v1-3b-gpu:latest \
-            --file ./cdr-replit/docker/gpu/Dockerfile \
-            --build-arg="MODEL_ID=replit/replit-code-v1-3b" \
-            --tag ghcr.io/premai-io/coder-replit-code-v1-3b-gpu:latest \
-            --tag ghcr.io/premai-io/coder-replit-code-v1-3b-gpu:$VERSION \
-            --platform linux/amd64 ./cdr-replit
+            --cache-from ghcr.io/premai-io/coder-codet5p-220m-py-cpu:latest \
+            --file ./cdr-t5/docker/cpu/Dockerfile \
+            --build-arg="MODEL_ID=Salesforce/codet5p-220m-py" \
+            --tag ghcr.io/premai-io/coder-codet5p-220m-py-cpu:latest \
+            --tag ghcr.io/premai-io/coder-codet5p-220m-py-cpu:$VERSION \
+            --platform linux/amd64 ./cdr-t5
 
     - name: Test the Images
       run: |
-        docker run --rm --gpus all ghcr.io/premai-io/coder-replit-code-v1-3b-gpu:latest pytest
+        docker run --rm ghcr.io/premai-io/coder-codet5p-220m-py-cpu:latest pytest
