--- a/.github/workflows/cht-dolly-v2.yml
+++ b/.github/workflows/cht-dolly-v2.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
@@ -25,15 +31,17 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build & Push the Images
-      run: |
-        docker buildx build --push \
-            --cache-from ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
-            --file ./cht-dolly-v2/docker/gpu/Dockerfile \
-            --build-arg="MODEL_ID=databricks/dolly-v2-12b" \
-            --tag ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
-            --tag ghcr.io/premai-io/chat-dolly-v2-12b-gpu:$VERSION \
-            --platform linux/amd64 ./cht-dolly-v2
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./cht-dolly-v2
+        push: true
+        file: ./cht-dolly-v2/docker/gpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=databricks/dolly-v2-12b
+        tags: ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest,ghcr.io/premai-io/chat-dolly-v2-12b-gpu:$VERSION
+        cache-from: type=registry,ref=ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest
+        cache-to: type=inline
 
     - name: Test the Images
       run: |
