--- a/.github/workflows/cht-dolly-v2.yml
+++ b/.github/workflows/cht-dolly-v2.yml
@@ -39,7 +39,7 @@ jobs:
         file: ./cht-dolly-v2/docker/gpu/Dockerfile
         platforms: linux/amd64
         build-args: MODEL_ID=databricks/dolly-v2-12b
-        tags: ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest,ghcr.io/premai-io/chat-dolly-v2-12b-gpu:{{ env.VERSION }}}
+        tags: ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest,ghcr.io/premai-io/chat-dolly-v2-12b-gpu:${{ env.VERSION }}}
         cache-from: type=registry,ref=ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest
         cache-to: type=inline
 
