--- a/.github/workflows/a2t-whisper.yml
+++ b/.github/workflows/a2t-whisper.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
@@ -25,23 +31,29 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build & Push the Images
-      run: |
-        docker buildx build --push \
-            --cache-from ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:latest \
-            --file ./a2t-whisper/docker/cpu/Dockerfile \
-            --build-arg="MODEL_ID=tiny" \
-            --tag ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:latest \
-            --tag ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:$VERSION \
-            --platform linux/arm64,linux/amd64 ./a2t-whisper
+    - name: Build and push tiny image
+      uses: docker/build-push-action@v4
+      with:
+        context: ./a2t-whisper
+        push: true
+        file: ./a2t-whisper/docker/cpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=tiny
+        tags: audio-to-text-whisper-tiny-cpu:latest,ghcr.io/audio-to-text-whisper-tiny-cpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=audio-to-text-whisper-tiny-cpu:latest
+        cache-to: type=inline
 
-        docker buildx build --push \
-            --cache-from ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest \
-            --file ./a2t-whisper/docker/gpu/Dockerfile \
-            --build-arg="MODEL_ID=large-v2" \
-            --tag ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest \
-            --tag ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:$VERSION \
-            --platform linux/amd64 ./a2t-whisper
+    - name: Build and push large image
+      uses: docker/build-push-action@v4
+      with:
+        context: ./a2t-whisper
+        push: true
+        file: ./a2t-whisper/docker/gpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=large-v2
+        tags: audio-to-text-whisper-large-v2-gpu:latest,ghcr.io/audio-to-text-whisper-large-v2-gpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=audio-to-text-whisper-large-v2-gpu:latest
+        cache-to: type=inline
 
     - name: Test the Images
       run: |
