--- a/.github/workflows/cdr-t5.yml
+++ b/.github/workflows/cdr-t5.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
@@ -25,15 +31,17 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build & Push the Images
-      run: |
-        docker buildx build --push \
-            --cache-from ghcr.io/premai-io/coder-codet5p-220m-py-cpu:latest \
-            --file ./cdr-t5/docker/cpu/Dockerfile \
-            --build-arg="MODEL_ID=Salesforce/codet5p-220m-py" \
-            --tag ghcr.io/premai-io/coder-codet5p-220m-py-cpu:latest \
-            --tag ghcr.io/premai-io/coder-codet5p-220m-py-cpu:$VERSION \
-            --platform linux/amd64 ./cdr-t5
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./cdr-t5
+        push: true
+        file: ./cdr-t5/docker/cpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=Salesforce/codet5p-220m-py
+        tags: ghcr.io/premai-io/coder-codet5p-220m-py-cpu:latest,ghcr.io/premai-io/coder-codet5p-220m-py-cpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/coder-codet5p-220m-py-cpu:latest
+        cache-to: type=inline
 
     - name: Test the Images
       run: |
