--- a/.github/workflows/cht-llama-cpp.yml
+++ b/.github/workflows/cht-llama-cpp.yml
@@ -18,29 +18,42 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build & Push the Images
-      run: |
-        docker buildx build --push \
-            --cache-from ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest \
-            --file ./cht-llama-cpp/docker/cpu/Dockerfile \
-            --build-arg="MODEL_ID=vicuna-7b-q4" \
-            --tag ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest \
-            --tag ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:$VERSION \
-            --platform linux/arm64,linux/amd64 ./cht-llama-cpp
-        docker buildx build --push \
-            --cache-from ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:latest \
-            --file ./cht-llama-cpp/docker/cpu/Dockerfile \
-            --build-arg="MODEL_ID=gpt4all-lora-q4" \
-            --tag ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:latest \
-            --tag ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:$VERSION \
-            --platform linux/arm64,linux/amd64 ./cht-llama-cpp
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./cht-llama-cpp
+        push: true
+        file: ./cht-llama-cpp/docker/cpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=vicuna-7b-q4
+        tags: ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest,ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest
+        cache-to: type=inline
+
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./cht-llama-cpp
+        push: true
+        file: ./cht-llama-cpp/docker/cpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=gpt4all-lora-q4
+        tags: ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:latest,ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:latest
+        cache-to: type=inline
 
     - name: Test the Images
       run: |
