--- a/.github/workflows/dfs-diffusers.yml
+++ b/.github/workflows/dfs-diffusers.yml
@@ -18,58 +18,90 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build & Push the Images
-      run: |
-        docker buildx build --push \
-            --cache-from=ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-cpu:latest \
-            --file ./dfs-diffusers/docker/cpu/Dockerfile \
-            --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-cpu:latest \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-cpu:$VERSION \
-            --platform linux/arm64,linux/amd64 ./dfs-diffusers
-        docker buildx build --push \
-            --cache-from=ghcr.io/premai-io/diffuser-stable-diffusion-2-base-cpu:latest \
-            --file ./dfs-diffusers/docker/cpu/Dockerfile \
-            --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-2-base-cpu:latest \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-2-base-cpu:$VERSION \
-            --platform linux/arm64,linux/amd64 ./dfs-diffusers
-        docker buildx build --push \
-            --cache-from=ghcr.io/premai-io/diffuser-stable-diffusion-1-5-cpu:latest \
-            --file ./dfs-diffusers/docker/cpu/Dockerfile \
-            --build-arg="MODEL_ID=runwayml/stable-diffusion-v1-5" \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-1-5-cpu:latest \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-1-5-cpu:$VERSION \
-            --platform linux/arm64,linux/amd64 ./dfs-diffusers
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./dfs-diffusers
+        push: true
+        file: ./dfs-diffusers/docker/cpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=stabilityai/stable-diffusion-2-1-base
+        tags: ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-cpu:latest,ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-cpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-cpu:latest
+        cache-to: type=inline
 
-        docker buildx build --push \
-            --cache-from=ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-gpu:latest \
-            --file ./dfs-diffusers/docker/gpu/Dockerfile \
-            --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-1-base" \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-gpu:latest \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-gpu:$VERSION \
-            --platform linux/amd64 ./dfs-diffusers
-        docker buildx build --push \
-            --cache-from=ghcr.io/premai-io/diffuser-stable-diffusion-2-base-gpu:latest \
-            --file ./dfs-diffusers/docker/gpu/Dockerfile \
-            --build-arg="MODEL_ID=stabilityai/stable-diffusion-2-base" \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-2-base-gpu:latest \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-2-base-gpu:$VERSION \
-            --platform linux/amd64 ./dfs-diffusers
-        docker buildx build --push \
-            --cache-from=ghcr.io/premai-io/diffuser-stable-diffusion-1-5-gpu:latest \
-            --file ./dfs-diffusers/docker/gpu/Dockerfile \
-            --build-arg="MODEL_ID=runwayml/stable-diffusion-v1-5" \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-1-5-gpu:latest \
-            --tag ghcr.io/premai-io/diffuser-stable-diffusion-1-5-gpu:$VERSION \
-            --platform linux/arm64,linux/amd64 ./dfs-diffusers
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./dfs-diffusers
+        push: true
+        file: ./dfs-diffusers/docker/cpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=stabilityai/stable-diffusion-2-base
+        tags: ghcr.io/premai-io/diffuser-stable-diffusion-2-base-cpu:latest,ghcr.io/premai-io/diffuser-stable-diffusion-2-base-cpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/diffuser-stable-diffusion-2-base-cpu:latest
+        cache-to: type=inline
+
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./dfs-diffusers
+        push: true
+        file: ./dfs-diffusers/docker/cpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=stabilityai/stable-diffusion-v1-5
+        tags: ghcr.io/premai-io/diffuser-stable-diffusion-1-5-base-cpu:latest,ghcr.io/premai-io/diffuser-stable-diffusion-1-5-base-cpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/diffuser-stable-diffusion-1-5-base-cpu:latest
+        cache-to: type=inline
+
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./dfs-diffusers
+        push: true
+        file: ./dfs-diffusers/docker/gpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=stabilityai/stable-diffusion-v1-5
+        tags: ghcr.io/premai-io/diffuser-stable-diffusion-1-5-cpu:latest,ghcr.io/premai-io/diffuser-stable-diffusion-1-5-gpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/diffuser-stable-diffusion-1-5-gpu:latest
+        cache-to: type=inline
+
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./dfs-diffusers
+        push: true
+        file: ./dfs-diffusers/docker/gpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=stabilityai/stable-diffusion-2-1-base
+        tags: ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-cpu:latest,ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-gpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/diffuser-stable-diffusion-2-1-base-gpu:latest
+        cache-to: type=inline
+
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./dfs-diffusers
+        push: true
+        file: ./dfs-diffusers/docker/gpu/Dockerfile
+        platforms: linux/amd64
+        build-args: MODEL_ID=stabilityai/stable-diffusion-2-base
+        tags: ghcr.io/premai-io/diffuser-stable-diffusion-2-base-cpu:latest,ghcr.io/premai-io/diffuser-stable-diffusion-2-base-gpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/diffuser-stable-diffusion-2-base-gpu:latest
+        cache-to: type=inline
 
     - name: Test the Images
       run: |
