--- a/.github/workflows/t2a-bark.yml
+++ b/.github/workflows/t2a-bark.yml
@@ -18,28 +18,40 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build & Push the Images
-      run: |
-        docker buildx build --push \
-            --cache-from=ghcr.io/premai-io/text-to-audio-bark-cpu:latest \
-            --file ./t2a-bark/docker/cpu/Dockerfile \
-            --tag ghcr.io/premai-io/text-to-audio-bark-cpu:latest \
-            --tag ghcr.io/premai-io/text-to-audio-bark-cpu:$VERSION \
-            --platform linux/arm64,linux/amd64 ./t2a-bark
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./t2a-bark
+        push: true
+        file: ./t2a-bark/docker/cpu/Dockerfile
+        platforms: linux/amd64
+        tags: ghcr.io/premai-io/text-to-audio-bark-cpu:latest,ghcr.io/premai-io/text-to-audio-bark-cpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/text-to-audio-bark-cpu:latest
+        cache-to: type=inline
 
-        docker buildx build --push \
-            --cache-from=ghcr.io/premai-io/text-to-audio-bark-gpu:latest \
-            --file ./t2a-bark/docker/gpu/Dockerfile \
-            --tag ghcr.io/premai-io/text-to-audio-bark-gpu:latest \
-            --tag ghcr.io/premai-io/text-to-audio-bark-gpu:$VERSION \
-            --platform linux/amd64 ./t2a-bark
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./t2a-bark
+        push: true
+        file: ./t2a-bark/docker/gpu/Dockerfile
+        platforms: linux/amd64
+        tags: ghcr.io/premai-io/text-to-audio-bark-gpu:latest,ghcr.io/premai-io/text-to-audio-bark-gpu:${{ env.VERSION }}
+        cache-from: type=registry,ref=ghcr.io/premai-io/text-to-audio-bark-gpu:latest
+        cache-to: type=inline
 
     - name: Test the Images
       run: |
