--- a/.github/workflows/cht-llama-cpp.yml
+++ b/.github/workflows/cht-llama-cpp.yml
@@ -37,7 +37,7 @@ jobs:
         context: ./cht-llama-cpp
         push: true
         file: ./cht-llama-cpp/docker/cpu/Dockerfile
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         build-args: MODEL_ID=vicuna-7b-q4
         tags: ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest,ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:${{ env.VERSION }}
         cache-from: type=registry,ref=ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest
@@ -49,12 +49,8 @@ jobs:
         context: ./cht-llama-cpp
         push: true
         file: ./cht-llama-cpp/docker/cpu/Dockerfile
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         build-args: MODEL_ID=gpt4all-lora-q4
         tags: ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:latest,ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:${{ env.VERSION }}
         cache-from: type=registry,ref=ghcr.io/premai-io/chat-gpt4all-lora-q4-cpu:latest
         cache-to: type=inline
-
-    - name: Test the Images
-      run: |
-        docker run --rm ghcr.io/premai-io/chat-vicuna-7b-q4-cpu:latest pytest
