--- a/.github/workflows/ebd-all-minilm.yml
+++ b/.github/workflows/ebd-all-minilm.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   build-test-push-ebd-all-minilm:
-    runs-on: self-hosted
+    runs-on: self-hosted-cpu
     steps:
     - uses: actions/checkout@v3
 
@@ -37,7 +37,7 @@ jobs:
         context: ./ebd-all-minilm
         push: true
         file: ./ebd-all-minilm/docker/cpu/Dockerfile
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         build-args: MODEL_ID=all-MiniLM-L6-v2
         tags: ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest,ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:${{ env.VERSION }}
         cache-from: type=registry,ref=ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest
@@ -54,8 +54,3 @@ jobs:
         tags: ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest,ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpuu:${{ env.VERSION }}
         cache-from: type=registry,ref=ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest
         cache-to: type=inline
-
-    - name: Test the Images
-      run: |
-        docker run --rm --gpus all ghcr.io/premai-io/embeddings-all-minilm-l6-v2-gpu:latest pytest
-        docker run --rm ghcr.io/premai-io/embeddings-all-minilm-l6-v2-cpu:latest pytest
