--- a/.github/workflows/t2a-bark.yml
+++ b/.github/workflows/t2a-bark.yml
@@ -31,7 +31,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push
+    - name: Build and push CPU
       uses: docker/build-push-action@v4
       with:
         context: ./t2a-bark
@@ -42,13 +42,12 @@ jobs:
         cache-from: type=registry,ref=ghcr.io/premai-io/text-to-audio-bark-cpu:latest
         cache-to: type=inline
 
-    - name: Build and push
+    - name: Build and push GPU
       uses: docker/build-push-action@v4
       with:
         context: ./t2a-bark
         push: true
         file: ./t2a-bark/docker/gpu/Dockerfile
-        platforms: linux/amd64
         tags: ghcr.io/premai-io/text-to-audio-bark-gpu:latest,ghcr.io/premai-io/text-to-audio-bark-gpu:${{ env.VERSION }}
         cache-from: type=registry,ref=ghcr.io/premai-io/text-to-audio-bark-gpu:latest
         cache-to: type=inline
