--- a/a2t-whisper/docker/gpu/Dockerfile
+++ b/a2t-whisper/docker/gpu/Dockerfile
@@ -8,9 +8,11 @@ COPY requirements.txt /usr/src/app/
 
 RUN pip3 install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY download.py .
 
 RUN python3 download.py --model $MODEL_ID
+
+COPY . .
 
 ENV MODEL_ID=$MODEL_ID
 ENV DEVICE=cuda
