running the gpu build on machine instead of docker

--- a/.github/workflows/a2t-whisper.yml
+++ b/.github/workflows/a2t-whisper.yml
@@ -31,7 +31,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push tiny image
+    - name: Build and push CPU image
       uses: docker/build-push-action@v4
       with:
         context: ./a2t-whisper
@@ -42,13 +42,12 @@ jobs:
         tags: audio-to-text-whisper-tiny-cpu:latest,ghcr.io/audio-to-text-whisper-tiny-cpu:${{ env.VERSION }}
         cache-from: type=registry,ref=audio-to-text-whisper-tiny-cpu:latest
 
-    - name: Build and push large image
-      uses: docker/build-push-action@v4
-      with:
-        context: ./a2t-whisper
-        push: true
-        file: ./a2t-whisper/docker/gpu/Dockerfile
-        platforms: linux/amd64
-        build-args: MODEL_ID=large-v2
-        tags: audio-to-text-whisper-large-v2-gpu:latest,ghcr.io/audio-to-text-whisper-large-v2-gpu:${{ env.VERSION }}
-        cache-from: type=registry,ref=audio-to-text-whisper-large-v2-gpu:latest
+    - name: Build and push GPU image
+      run: |
+        docker buildx build --push \
+          --cache-from ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest \
+          --file ./a2t-whisper/docker/gpu/Dockerfile \
+          --build-arg="MODEL_ID=large-v2" \
+          --tag ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest \
+          --tag ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:$VERSION \
+          --platform linux/amd64 ./a2t-whisper
