--- a/.github/workflows/cht-dolly-v2.yml
+++ b/.github/workflows/cht-dolly-v2.yml
@@ -14,15 +14,9 @@ on:
 
 jobs:
   build-test-push-cht-dolly-v2:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted-cpu
     steps:
     - uses: actions/checkout@v3
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
 
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
@@ -31,12 +25,13 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-        context: ./cht-dolly-v2
-        push: true
-        file: ./cht-dolly-v2/docker/gpu/Dockerfile
-        build-args: MODEL_ID=databricks/dolly-v2-12b
-        tags: ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest,ghcr.io/premai-io/chat-dolly-v2-12b-gpu:${{ env.VERSION }}
-        cache-from: type=registry,ref=ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest
+    - name: Build and Push
+      run: |
+        docker build \
+          --cache-from ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
+          --file ./cht-dolly-v2/docker/gpu/Dockerfile \
+          --build-arg="MODEL_ID=databricks/dolly-v2-12b" \
+          --tag ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest \
+          --tag ghcr.io/premai-io/chat-dolly-v2-12b-gpu:$VERSION ./cht-dolly-v2
+        docker push ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest
+        docker push ghcr.io/premai-io/chat-dolly-v2-12b-gpu:$VERSION
