add: support for SD-XL 1.0 and refiner

--- a/dfs-diffusers/docker/gpu/Dockerfile
+++ b/dfs-diffusers/docker/gpu/Dockerfile
@@ -1,6 +1,7 @@
 FROM huggingface/transformers-pytorch-gpu:latest
 
 ARG MODEL_ID
+ARG REFINER_ID
 
 WORKDIR /usr/src/app/
 
@@ -10,11 +11,12 @@ RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY download.py .
 
-RUN python3 download.py --model $MODEL_ID
+RUN python3 download.py --model $MODEL_ID --refiner $REFINER_ID
 
 COPY . .
 
 ENV MODEL_ID=$MODEL_ID
+ENV REFINER_ID=$REFINER_ID
 ENV DEVICE=cuda
 
 CMD python3 main.py
