--- a/dfs-diffusers/requirements.txt
+++ b/dfs-diffusers/requirements.txt
@@ -6,8 +6,9 @@ tqdm==4.65.0
 httpx==0.23.3
 python-dotenv==1.0.0
 tenacity==8.2.2
-diffusers==0.18.2
+diffusers==0.19.0
 torch==2.0.1
 accelerate==0.21.0
 pydantic==1.10.11
 python-multipart==0.0.6
+invisible-watermark==0.2.0
