Revert "fix: #71 by making REFINER_ID env variable"
This reverts commit 9d4a1450c718f59661659994de8ef17f5857a61c.

--- a/dfs-diffusers/docker/gpu/Dockerfile
+++ b/dfs-diffusers/docker/gpu/Dockerfile
@@ -11,7 +11,7 @@ RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY download.py .
 
-RUN python3 download.py --model $MODEL_ID
+RUN python3 download.py --model $MODEL_ID --refiner $REFINER_ID
 
 COPY . .
 
