--- a/cht-petals/docker/cpu/Dockerfile
+++ b/cht-petals/docker/cpu/Dockerfile
@@ -1,18 +1,18 @@
 FROM python:3.10-slim-bullseye
-
-RUN apt update && apt install -y libopenblas-dev ninja-build build-essential wget git
-RUN python -m pip install --upgrade pip pytest cmake scikit-build setuptools
-
 WORKDIR /usr/src/app/
 
-COPY requirements.txt ./
+RUN apt update -qq && apt install -yqq --no-install-recommends \
+    libopenblas-dev ninja-build build-essential wget git \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir -r ./requirements.txt --upgrade pip
+COPY requirements.txt .
+RUN pip install pytest cmake scikit-build setuptools
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY download.py .
 ARG MODEL_ID
-ENV MODEL_ID=$MODEL_ID
-RUN python3 download.py --model $MODEL_ID
+COPY download.py .
+RUN python download.py --model $MODEL_ID
 
 COPY . .
+ENV MODEL_ID=$MODEL_ID
 CMD python main.py
