--- a/t2a-bark/docker/gpu/Dockerfile
+++ b/t2a-bark/docker/gpu/Dockerfile
@@ -1,20 +1,14 @@
 FROM huggingface/transformers-pytorch-gpu:latest
-
-ARG MODEL_ID
-
 WORKDIR /usr/src/app/
 
-COPY requirements.txt /usr/src/app/
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-RUN pip3 install --no-cache-dir -r requirements.txt
-
+ARG MODEL_ID
 COPY download.py .
-
-RUN python3 download.py
+RUN python download.py
 
 COPY . .
-
 ENV MODEL_ID=$MODEL_ID
 ENV DEVICE=cuda
-
-CMD python3 main.py
+CMD python main.py
