--- a/a2t-whisper/docker/cpu/Dockerfile
+++ b/a2t-whisper/docker/cpu/Dockerfile
@@ -1,25 +1,19 @@
 FROM python:3.10-slim-bullseye
-
 WORKDIR /usr/src/app/
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    build-essential \
-    git \
-    wget \
-    libatlas-base-dev \
-    ffmpeg
+RUN apt update -qq && apt install -yqq --no-install-recommends \
+    build-essential git wget libatlas-base-dev ffmpeg \
+    && rm -rf /var/lib/apt/lists/*
 COPY requirements.txt .
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 ARG MODEL_ID
 COPY download.py .
-RUN python3 download.py --model $MODEL_ID
+RUN python download.py --model $MODEL_ID
 
 COPY . .
 ENV MODEL_ID=$MODEL_ID
 ENV DEVICE=cpu
-CMD python3 main.py
+CMD python main.py
