--- a/cdr-t5/docker/cpu/Dockerfile
+++ b/cdr-t5/docker/cpu/Dockerfile
@@ -6,7 +6,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 ARG MODEL_ID
 COPY download.py .
-RUN python3 download.py --model $MODEL_ID
+RUN python download.py --model $MODEL_ID
 
 COPY . .
 ENV MODEL_ID=$MODEL_ID
