--- a/cht-petals/docker/cpu/Dockerfile
+++ b/cht-petals/docker/cpu/Dockerfile
@@ -4,9 +4,8 @@ WORKDIR /usr/src/app/
 RUN apt update -qq && apt install -yqq --no-install-recommends \
     libopenblas-dev ninja-build build-essential wget git \
     && rm -rf /var/lib/apt/lists/*
-
 COPY requirements.txt .
-RUN pip install pytest cmake scikit-build setuptools
+#RUN pip install pytest cmake scikit-build setuptools
 RUN pip install --no-cache-dir -r requirements.txt
 
 ARG MODEL_ID
