--- a/cht-gorilla/docker/gpu/Dockerfile
+++ b/cht-gorilla/docker/gpu/Dockerfile
@@ -1,6 +1,7 @@
 FROM huggingface/transformers-pytorch-gpu:4.28.1
 WORKDIR /usr/src/app/
 
+RUN cd $(dirname $(which python3)) && ln -s python3 python
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
